@startuml
skinparam linetype ortho

' === DatabaseConnection ===
class DatabaseConnection {
    +static getConnection(): Connection
}

' === Pengguna ===
class Pengguna {
    -pid: String
    -npid: String
    -namaLengkap: String
    -noRek: String
    -saldo: double
    -pin: String
    -email: String
    -noHP: String
    -username: String

    +Pengguna()
    +getNamaPertama(): String
    +getNoRek(): String
    +getSaldo(): double
    +getPID(): String
    +getNPID(): String
    +getPIN(): String
    +getEmail(): String
    +getNoHP(): String
    +getUsername(): String
    +getNamaLengkap(): String

    +static login(username: String, password: String): Pengguna
    + static String verifikasiDataAwal(nama: String, nik: String, noRek: String, pin: String, noHP: String, email: String): String
    + static boolean buatAkun(username: String, password: String, npid: String): boolean
    +static getInfoRekening(pid: String): Pengguna
}

' === Transfer ===
class Transfer {
    -noRekTujuan: String
    -bankTujuan: String
    -nominal: double

    +Transfer(noRekTujuan: String, bankTujuan: String, nominal: double)
    +rekeningTujuanValid(): boolean
    +prosesTransfer(pengirimNPID: String, pinInput: String, storedPIN: String): boolean
    +getNominal(): double
    +static getSaldoBaru(npid: String): double
}

' === EWallet ===
class EWallet {
    +static topUp(NPID: String, inputPIN: String, inputNominal: String): boolean
}

' === MBankingGUI (logic-only) ===
class MBankingGUI {
    -isLoggedIn: boolean
    -NPID: String
    -PID: String
    -TPIN: String
    -transfer: Transfer

    +MBankingGUI()
    +btnSubmitLoginActionPerformed()
    +btnTransfer2ActionPerformed()
    +updateSaldo()
}

' === Relations ===
' Pengguna memiliki satu koneksi (static) ke DB
Pengguna "1" --> "1" DatabaseConnection : menggunakan
' EWallet membutuhkan akses ke pengguna (One-to-One) dan DB (Shared)
EWallet "1" --> "1" Pengguna : memiliki
EWallet "*" --> "1" DatabaseConnection : menggunakan

' Transfer mengakses database
Transfer "*" --> "1" DatabaseConnection : menggunakan

' GUI menggunakan semua entitas
MBankingGUI "1" --> "1" Pengguna : menggunakan
MBankingGUI "1" --> "*" Transfer : menggunakan
MBankingGUI "1" --> "1" EWallet : menggunakan
MBankingGUI "1" --> "1" DatabaseConnection : menggunakan
@enduml